--- a/app/src/main/res/layout/card_model.xml
+++ b/app/src/main/res/layout/card_model.xml
@@ -3,48 +3,45 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-
     <androidx.cardview.widget.CardView
-            android:id="@+id/cardView"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_gravity="center"
-            android:layout_margin="4dp"
-            app:cardBackgroundColor="#FBE51D"
-            app:cardCornerRadius="30dp"
-
-            app:cardElevation="3dp"
-            app:cardUseCompatPadding="true">
+        android:id="@+id/cardView"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:layout_margin="4dp"
+        app:cardBackgroundColor="#FBE51D"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="3dp"
+        app:cardUseCompatPadding="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
-               <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_marginLeft="20dp"
-                    android:scaleType="centerCrop"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginLeft="20dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-               <TextView
-                    android:id="@+id/pokemonname"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="170dp"
-                    android:text="name"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                   android:paddingTop="5dp"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                     />
+            <TextView
+                android:id="@+id/pokemonname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="170dp"
+                android:paddingTop="5dp"
+                android:text="name"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
