--- a/app/src/main/res/layout/activity_pokemon_details.xml
+++ b/app/src/main/res/layout/activity_pokemon_details.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="#E6B6B6"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -15,6 +16,9 @@
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteX="1dp"
             tools:layout_editor_absoluteY="0dp">
+
+
+
 
             <com.google.android.material.appbar.AppBarLayout
                 android:id="@+id/appBar"
@@ -36,7 +40,6 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/back" />
-
             <ImageView
                 android:id="@+id/pokemonImage"
                 android:layout_width="150dp"
