--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,16 @@
         tools:viewBindingIgnore="true"
         android:orientation="horizontal"
         tools:context=".MainActivity">
-
+<androidx.core.widget.NestedScrollView
+    android:id="@+id/scrollNested"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             tools:listitem="@layout/card_model" />
-
+</androidx.core.widget.NestedScrollView>
     </LinearLayout>
 </layout>
